--- a/Mapa/Mapa.vcxproj
+++ b/Mapa/Mapa.vcxproj
@@ -126,6 +126,7 @@
     <ClInclude Include="Form1.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="Funcion.h" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
