--- a/Mapa/Mapa.vcxproj.filters
+++ b/Mapa/Mapa.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="Form1.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Funcion.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
