--- a/Mapa/Mapa.vcxproj
+++ b/Mapa/Mapa.vcxproj
@@ -123,10 +123,15 @@
     <ClCompile Include="Form1.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Agrupacion.h" />
+    <ClInclude Include="Control.h" />
+    <ClInclude Include="Fila.h" />
     <ClInclude Include="Form1.h">
       <FileType>CppForm</FileType>
     </ClInclude>
     <ClInclude Include="Funcion.h" />
+    <ClInclude Include="Mapa.h" />
+    <ClInclude Include="TablaVerdad.h" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
