--- a/Mapa/Mapa.vcxproj.filters
+++ b/Mapa/Mapa.vcxproj.filters
@@ -41,5 +41,11 @@
     <ClInclude Include="Control.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Variable.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Formula.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
