--- a/Mapa/Mapa.vcxproj.filters
+++ b/Mapa/Mapa.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClInclude Include="Formula.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Expresion.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
